fixing overflow issue

--- a/style.css
+++ b/style.css
@@ -8,7 +8,9 @@ html, body {
 }
 body {
     font-family: 'Maven Pro', sans-serif;
+    contain: strict;
     overflow-x: hidden;
+
 }
 :root {
     --main-color: #051073;
@@ -18,6 +20,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
+
 }
 nav svg {
     cursor: pointer;
@@ -34,7 +37,10 @@ nav svg {
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+   
     transform: translateX(100%);
+   
+    
 }
 .links a {
     color: black;
